--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		
 		<!-- Title -->
-		<title>Axen - Personal Portfolio WordPress Theme | AthenaStudio</title>
+		<title>Demo Author Website - Contact us</title>
 		
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="selector/favicon.ico" />
