--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="profile" href="https://gmpg.org/xfn/11" />
   <link rel="pingback" href="https://www.athenadesignstudio.com/themes/axen-wp/xmlrpc.php" />
 
-  <title>Axen &#8211; Personal Portfolio WordPress Theme</title>
+  <title>Demo Author Website</title>
   <link rel='dns-prefetch' href='//fonts.googleapis.com' />
   <link rel='dns-prefetch' href='//s.w.org' />
   <link rel="alternate" type="application/rss+xml" title="Axen &raquo; Feed" href="https://www.athenadesignstudio.com/themes/axen-wp/feed/" />
